Add test-db functionality with a script (remember to create .env.test)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
-    "start": "node src/index.js"
+    "dev:test": "node --env-file=.env.test --watch src/index.js",
+    "start": "node src/index.js",
+    "start:test": "node --env-file=.env.test src/index.js",
+    "clone": "node copy-prod-to-test.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
