feat: implement ASIN caching mechanism and enhance product data fetching with retries

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "openai": "^6.15.0",
     "p-limit": "^7.3.0",
